syntax = "proto3";
option go_package = "./pb";

message LampadaRequest{
    string Nome = 1;
}

message ArCondicionadoRequest{
    string Nome = 1;
}

message ControleDeIncendioRequest{
    string Nome = 1;
}

message Response{
    string Nome = 1;
    string Tipo = 2;
    bool Power = 3;
    string Status = 4;
    float IntensidadeLuminosa = 5;
}

service Lampada {
    rpc LigarLampada(LampadaRequest) returns (Response){}
    rpc DesligarLampada(LampadaRequest) returns (Response){}
}

service ArCondicionado {
    rpc LigarArCondicionado(ArCondicionadoRequest) returns (Response){}
    rpc DesligarArCondicionado(ArCondicionadoRequest) returns (Response){}
}

service ControleDeIncendio {
    rpc LigarControleDeIncendio(ControleDeIncendioRequest) returns (Response){}
    rpc DesligarControleDeIncendio(ControleDeIncendioRequest) returns (Response){}
}